[package]
name = "key_value_store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rest-proxy"
path = "src/rest_proxy.rs"

[dependencies]
warp = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
http = "0.2.5"
sha256 = "1.2.2"
dashmap = "5.5.3"
clap = { version = "4.1.4", features = ["derive"] }

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]