[package]
name = "key_value_store"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rest-proxy"
path = "src/rest_proxy.rs"

[[bin]]
name = "grpc-server"
path = "src/key_value_service/grpc_service.rs"

[dependencies]
warp = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
http = "0.2.5"
sha256 = "1.2.2"
dashmap = "5.5.3"
tonic = "0.8"
prost = "0.11"
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.6.0"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
futures-util = "0.3.25"